# Milestone

./: .gitignore  .replit  README.md  capacitor.config.json  capacitor.config.ts  docker-compose.yml  electron.js  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.ts  vitest.config.ts
.cursor/rules/: client-structure.mdc  general.mdc  report-generation.mdc  server-structure.mdc
attached_assets/: Pasted-Investment-Tracker-MVP-Project-Prompt-Project-Overview-Build-an-Investment-Tracker-App-There-s-1742853674973.txt
client/: index.html
client/src/: App.tsx  capacitor.ts  index.css  main.tsx
dev/: trading212.ts
migrations/: 0000_init.sql  0001_refresh-token-tenantid.sql  0002_assets-refactor.sql  0003_recurring-contributions.sql  0004_contribution-not-debit.sql  0005_fire-settings-additions.sql  0006_securities.sql
migrations/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  0005_snapshot.json  0006_snapshot.json  _journal.json
public/: manifest.json  sw.js
python/finance_api_one/: __init__.py  pyproject.toml
python/finance_api_one/src/finance_api_one/: __init__.py  alpha_vantage.py  backtesting.py  cli.py  eodhd.py  open_figi.py
reports/: gl-one-sprint-report.md  gl-three-sprint-report.md  gl-two-sprint-report.md  replit-new-sprint-report.md  replit-new-three-sprint-report.md  replit-new-two-sprint-report.md
scripts/: generate-icons.js
server/: apiServices.ts  index.ts  routes.ts  storage.ts  vite.ts
server/auth/: auth.ts  index.ts  middleware.ts  (+3 more)
shared/: schema.ts
(+159 files in other folders)
