[project]
name = "milestone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Gary Law", email = "skin@skinv1.co.uk" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
milestone = "milestone:main"

#[tool.uv.sources]


[tool.uv.workspace]
members = ["python/finance_api_one"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
