[project]
name = "finance-api-one"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Gary Law", email = "skin@skinv1.co.uk" }
]
requires-python = ">=3.12"

dependencies = [
    "asyncio>=3.4.3",
    "backtesting>=0.6.4",
    "dotenv>=0.9.9",
    "eodhd>=1.0.32",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
]

[project.scripts]
alpha_vantage = "finance_api_one.alpha_vantage:main"
open_figi = "finance_api_one.open_figi:main"
backtesting = "finance_api_one.backtesting:main"
eodhd = "finance_api_one.eodhd:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
